Archive2/bb/ed21fdb5e31ffd/output
main.cpp: In function 'void dataSourceForHist(const Table&)':
main.cpp:19:19: error: request for member 'isValid' in 'tableInfo', which is of non-class type 'TableInfo(FullObjId&)'
    if (!tableInfo.isValid())
                   ^
